Add DELETE /folder/id endpoint
